# osprei

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  testing.db
.ci/: clippy.json  test.json
ci/: clippy.json  format.json  test.json
example/: config.json
images/: cargo-build.dockerfile  osprei-git.dockerfile  sqlx-setup.dockerfile  sqlx.dockerfile
migrations/: 20231017173505_initial.sql  20231021064307_initial.sql
osprei/: Cargo.toml
osprei-app/: Cargo.toml
osprei-app/src/: lib.rs
osprei-cli/: Cargo.toml
osprei-cli/src/: lib.rs  main.rs
osprei-data/: Cargo.toml
osprei-data/src/: lib.rs
osprei-execution/: Cargo.toml
osprei-execution/src/: lib.rs
osprei-gui/: Cargo.toml  index.html  styles.css
osprei-gui/src/: app.rs  job_list.rs  lib.rs  main.rs  missing.rs  pages.rs  server.rs  widget.rs
osprei-gui/src/pages/: home.rs  job.rs
osprei-gui/src/widget/: button.rs  card.rs  execution_table.rs  job_table.rs  stage_form.rs  stages.rs
osprei-gui/style/: main.scss
osprei-new-gui/: Cargo.toml
osprei-new-gui/src/: lib.rs
osprei-new-server/: Cargo.toml
osprei-new-server/src/: handler.rs  main.rs
osprei-server/: Cargo.toml  README.md
osprei-server/migration/: start.sql
osprei-server/src/: config.rs  execute.rs  job.rs  lib.rs  main.rs  persistance.rs  routes.rs  views.rs
osprei-server/src/persistance/: memory.rs  request.rs  sqlite.rs
osprei-server/src/views/: execution.rs  storage.rs
osprei-server/src/views/storage/: adapter.rs
osprei-storage/: Cargo.toml
osprei-storage/src/: execution.rs  job.rs  lib.rs  stages.rs  templates.rs
osprei/src/: lib.rs
src/: lib.rs  main.rs
