[workspace]

members = [
    "osprei-server",
    "osprei",
    "osprei-cli",
    "osprei-gui",
    "osprei-new-gui",
    "osprei-new-server",
    "osprei-app",
]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.5" }
leptos_meta = { version = "0.5" }
leptos_router = { version = "0.5" }
leptos_axum = { version = "0.5" }

axum = "0.6.11"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
http = "0.2.9"
log = "0.4.17"
simple_logger = "4.1.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
wasm-bindgen = "=0.2.87"

[[workspace.metadata.leptos]]
# project name
name = "osprei"
bin-package = "osprei-new-server"
lib-package = "osprei-new-gui"
site-root = "target/site"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
