[workspace]
members = ["osprei-gui", "osprei-execution", "osprei-storage", "osprei-data"]
resolver = "2"

[workspace.dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
