[package]
name = "osprei-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
reqwest = "0.11.18"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
osprei = { path="../osprei" }