[package]
name = "osprei-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0", features = ["csr"] }
reqwest = "0.11.20"
serde_json = "1.0.107"
osprei = { path = "../osprei" }
serde = { version = "1.0.188", features = ["derive"] }
