[package]
name = "osprei-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.1.11", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "full"] }
warp = "0.3.3"
osprei = { path="../osprei" }
chrono = "0.4.24"
